# CozyFarmGame

./: Cargo.toml
assets/: level.json  map.json  tilemap.ron
assets/layers/: ground_layer.csv
assets/map/: Bridges.tsx  Dirt Wide.tsx  Doors.tsx  Fences.tsx  Grass.tsx  Hill.tsx  Paths.tsx  Water tiles.tsx  chicken_house.tsx  cozy_farm.tiled-session  furniture.tsx  grass_biome_things.tsx  house.tsx  main.tmx
src/: assets.rs  biome_interaction.rs  idle_animation.rs  inventory.rs  level_loader.rs  main.rs  map.rs  player.rs  player_old.rs  ron_asset_loader.rs  sprite_animation.rs  ui.rs
src/player/: animation.rs  mod.rs  movement.rs
