[package]
name = "cozy_farm"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.16"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
